--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ ul{
 .pb-100{
   padding-bottom: 100px;
 }
+img{
+  max-width: 100%;
+  vertical-align: middle;
+}
 
 /* Button Css */
 
@@ -298,8 +302,67 @@ ul{
   background-color: #292e47;
   color: #fff;
   padding: 80px 10px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.single-counter i {
+  margin-right: 16px;
+  font-size: 25px;
+}
+.single-content span {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  display: block;
 }
 .counter-area .col-xl-3:nth-child(even) .single-counter {
-  background-color: red;
+  background-color: #24283F;
+}
+.no-padding .col-xl-3{
+  padding: 0;
+}
+
+/* Team */
+
+
+.single-team img {
+  width: 100%;
+}
+.single-team {
+  position: relative;
+  transition: .3s;
+}
+.single-team:hover .team-overlay{
+  visibility: visible;
+  opacity: 1;
+}
+
+.team-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  visibility: hidden;
+  opacity: 0;
+  transition: .3s;
+}
+.team-overlay:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: .5;
+  z-index: -1;
+}
+.team-overlay a {
+  color: #fff;
 }
