--- a/style.css
+++ b/style.css
@@ -332,15 +332,15 @@ img{
 .single-team {
   position: relative;
   transition: .3s;
+  overflow: hidden;
 }
 .single-team:hover .team-overlay{
-  visibility: visible;
-  opacity: 1;
+  top: 0;
 }
 
 .team-overlay {
   position: absolute;
-  top: 0;
+  top: 100%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -350,8 +350,6 @@ img{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  visibility: hidden;
-  opacity: 0;
   transition: .3s;
 }
 .team-overlay:before {
@@ -365,4 +363,44 @@ img{
 }
 .team-overlay a {
   color: #fff;
+}
+
+.team-overlay h4 {
+  font-size: 26px;
+}
+.team-overlay h4 span {
+  display: block;
+  font-size: 18px;
+}
+.team-overlay {
+  text-align: center;
+}
+.testimonials-area .section-title {
+  color: white;
+}
+
+.single-testimonial {
+  text-align: center;
+  position: relative;
+  background-color: #333;
+  color: #fff;
+  padding: 30px;
+}
+.single-testimonial img {
+  max-width: 80px;
+  border-radius: 50%;
+  margin-top: -80px;
+  margin-bottom: 25px;
+  border: 1px solid #fff;
+  padding: 3px;
+}
+.single-testimonial h4 {
+  margin-top: 16px;
+  font-size: 22px;
+}
+.single-testimonial h4 span {
+  display: block;
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 9px;
 }
