--- a/style.css
+++ b/style.css
@@ -404,3 +404,120 @@ img{
   font-weight: 500;
   margin-top: 9px;
 }
+
+/* Blog CSS */
+
+.blog-content {
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+.blog-content h4 {
+  font-size: 22px;
+}
+.blog-content a {
+  margin: 13px 0;
+  display: inline-block;
+}
+
+.single-blog:hover .blog-img img{
+  transform: scale(1.1) rotate(5deg);
+}
+.blog-img{
+  overflow: hidden;
+}
+.blog-img img{
+  transition: .3s
+}
+
+.cta-area {
+  padding: 50px 0;
+  position: relative;
+  color: #fff;
+}
+.cta-area:before {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background-color: #292e47;
+  z-index: -1;
+  top: 0;
+  left: 0
+}
+.cta-area:after {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background-color: #24283F;
+  z-index: -1;
+  top: 0;
+  right: 0
+}
+
+.cta-area h4 {
+  font-size: 26px;
+  text-transform: capitalize;
+  margin-bottom: 9px;
+}
+.cta-area p {
+  text-transform: capitalize;
+}
+.cta-area a {
+  text-align: center;
+  display: block;
+  width: 150px;
+  margin: 0 auto;
+}
+
+.single-footer h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 34px;
+  font-weight: 900;
+}
+.single-footer p {
+  text-align: center;
+  margin-top: 10px;
+}
+.single-footer h4 {
+  text-transform: capitalize;
+  font-size: 22px;
+  position: relative;
+  margin-bottom: 15px;
+  padding-bottom: 5px;
+}
+.single-footer {
+  color: #fff;
+}
+.single-footer h4:before {
+  position: absolute;
+  content: "";
+  background-color: #635CDB;
+  left: 0;
+  bottom: -5px;
+  width: 40px;
+  height: 3px;
+}
+.footer-area {
+  background-color: #333;
+}
+.single-footer a {
+  color: #fff;
+}
+hr {
+  margin: 30px 0;
+}
+.single-footer ul li {
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+}
+.copy p {
+  color: #fff;
+}
+.footer-social {
+  text-align: right;
+}
+.footer-social a {
+  color: #fff;
+}
